--- a/.gitignore
+++ b/.gitignore
@@ -476,7 +476,7 @@ fabric.properties
 # .idea/compiler.xml
 # .idea/jarRepositories.xml
 # .idea/modules.xml
-# .idea/*.iml
+ .idea/*.iml
 # .idea/modules
 # *.iml
 # *.ipr
