cleaned up cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,37 +1,5 @@
 cmake_minimum_required(VERSION 3.25)
-project(LABO01)
-project(LABO02)
-project(LABO03ZAD01)
-project(LABO03ZAD02)
-project(LABO03ZAD03)
-project(LABO03ZAD04)
-project(LABO04ZAD01)
-project(LABO04ZAD02)
-project(LABO04ZAD03)
-project(LABO04ZAD04)
-project(LABO04ZAD05)
-project(LABO04ZAD06)
-project(LABO04ZAD07)
-project(LABO04ZAD08)
-project(LABO05ZAD01)
-project(LABO05ZAD02)
-project(LABO05ZAD03)
-project(LABO05ZAD04)
-project(LABO05ZAD05)
-project(LABO05ZAD06)
-project(LABO05ZAD07)
-project(LABO05ZAD08)
-project(LABO05ZAD09)
-project(LABO06ZAD01)
-project(LABO06ZAD02)
-project(LABO06ZAD03)
-project(LABO06ZAD04)
-project(UTRW01)
-project(WEJ01)
-project(WEJ02)
-project(WEJ03)
-project(WEJ04)
-project(WEJ05)
+project(PJC)
 
 set(CMAKE_CXX_STANDARD 20)
 
